Make compiler work